# dl-raii

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/dl_raii/: library.hpp  util.hpp
include/dl_raii/impl/: backendConcept.hpp  defaultBackend.hpp  library.ipp  util.ipp
tests/: CMakeLists.txt  main.cpp  testLibrary.cpp
